# pico-brteve

./: .gitignore  .gitmodules  README.md  index.md  readme.md
CPython/: README.md  brt_picoEve_module.py
EVE_Flash/: BT81X_flash.edf  BT81X_flash.map
IDM2040_demo/: code.py
IDM2040_demo/audio_play/: audio_eve.py  audio_play.py  helper_gesture.py  helper_image.py  song_bk_800x480_COMPRESSED_RGBA_ASTC_8x8_KHR.raw  tags.py  ui.py  widgets.py
IDM2040_demo/blinka/: blinka_rotate.py
IDM2040_demo/cube/: cube.py
IDM2040_demo/dmx512/: __init__.py  dmx512.py  dmx_ui.py  gesture.py
IDM2040_demo/image_viewer/: code.py  gesture.py  image_viewer.py
IDM2040_demo/main_menu/: brt_eve_rp2040_dmx.py  eve_snapshot.py  eve_tools.py  tags_all.py
IDM2040_demo/video2/: video2.py  widgets.py
LDS_Demo/: README.md  code.py
LDS_Demo/IDM2040_LDS_SDK_Firmware/: IDM2040_LDSBus_SDK_FIRMWARE.uf2
LDS_Demo/json/: 16385.json  32768.json  32769.json  32770.json  32771.json  32772.json  32773.json  32775.json  32776.json  32777.json  32778.json  32779.json  32780.json  32781.json  32782.json  32783.json  32784.json  32785.json  32786.json  49152.json  49153.json  64512.json  64513.json  64514.json  class_id.json  comment.jsoninfo  master_list.json
LDS_Demo/ui_lds/: LDSBus_Sensor.py  __init__.py  gesture.py  helper.py  layout.py  motion_sensor_active_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  motion_sensor_inactive_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  tags.py  ui.py  ui_4in1_sensor.py  ui_4in1_sensor_a.py  ui_4in1_sensor_h.py  ui_4in1_sensor_m.py  ui_4in1_sensor_t.py  ui_co2_sensor.py  ui_co2_sensor_ambient.py  ui_co2_sensor_co2.py  ui_co2_sensor_h.py  ui_co2_sensor_t.py  ui_common.py  ui_config.py  ui_lds_Details.py  ui_lds_scan.py  ui_main.py  ui_relay.py  widgets.py
c/: README.md
c/basic/: CMakeLists.txt  eve.c  eve.h  gameduino_3x_dazzler_1280x720.h  lcd.c  lcd_example.uf2  me817ev_1024x600.h  me817ev_800x480.h  readme.md  transport.c  transport.h
c/pico_SimHub_Dashboard_Demo/: CMakeLists.txt  README.md  main.c
c/pico_SimHub_Dashboard_Demo/assets/: GUI1_Gear_Highlighter_37x37_ARGB1555.rawh  GUI1_Needle_9x160_ARGB1555.rawh  assets.h  images_array.c
c/pico_SimHub_Leaderboard_Demo/: CMakeLists.txt  README.md  main.c
c/pico_SimHub_Leaderboard_Demo/assets/: Orbitron-Medium_18_L4.rawh  assets.h  bar_480x24_L8.rawh  images_array.c  images_raw.s
c/pico_SimHub_Leaderboard_Demo/test/: simhubtest.py
c/pico_Spaced_Invaders_Demo/: CMakeLists.txt  README.md
c/pico_Spaced_Invaders_Demo/invaders/: example.h  invaders.c
c/pico_Spaced_Invaders_Demo/lib/eve/: .gitignore  README.md
c/pico_Spaced_Invaders_Demo/lib/eve/include/: EVE.h  EVE_config.h
c/pico_Spaced_Invaders_Demo/lib/eve/ports/eve_arch_rpi/: EVE_MCU_RP2040.c
c/pico_Spaced_Invaders_Demo/lib/eve_ui/include/: eve_ui.h
c/pico_Spaced_Invaders_Demo/lib/eve_ui/ports/eve_arch_rpi/: eve_ui_mcu_rp2040.c
c/pico_Spaced_Invaders_Demo/lib/eve_ui/source/: eve_ram_g.c
c/pico_Spaced_Invaders_Demo/main/: main.c
c/pico_Virtual_Keyboard_Demo/: CMakeLists.txt  README.md  main.c  usb_descriptors.c
c/pico_Virtual_Keyboard_Demo/FontConvertor/: README.txt  utf8_extra.txt
c/pico_Virtual_Keyboard_Demo/Include/: EVE_config.h
circuitPython/: code.py  readme.md
circuitPython/doxygen/lib/: doxygen.conf  doxygen.footer.html
circuitPython/examples/: .pylintrc  bubble-code.py  circle-progress-bar.py  circle_progress_bar.py  fizz-code.py  flashinfo.py  helloworld-code.py  qix-code.py  readme.md  temperature-code.py  video.py
circuitPython/examples/Blinka_Rotate/: code.py
circuitPython/examples/EvChargePoint/: code.py
circuitPython/examples/Internet_display_and_ir_sensors/: Readme.txt  code_internet_display.py  code_ir_sensors_and_gestures.py
circuitPython/examples/alarm_clock/: README.md  code.py  readme.txt
circuitPython/examples/audio-playback/: BT81X_Flash.edf  BT81X_Flash.map  code.py  readme.txt
circuitPython/examples/blinka-rotate/: code.py
circuitPython/examples/dazzler-cube/: code.py
circuitPython/telemetrix_examples/: bubble-code.py  circle-progress-bar.py  fizz-code.py  flashinfo.py  helloworld.py  qix-code.py  readme.md
circuitPython/telemetrix_pico_bin/: Telemetrix4RpiPico.uf2  readme.md
james-ref/: .gitignore  LICENSE  README.md  setup.py
james-ref/bteve/: gameduino_circuitpython.py
tools/uf2/: BT815-unified.blob  BT817-unified.blob  LICENSE.md  README.md  eve_flash_pico.uf2  eve_flash_pico_GD3X_Dazzler.uf2  uf2conv4eve.py
tools/uf2/source/: CMakeLists.txt  EVE_Util_overwrite.c  LICENSE.md  README.md  board.h  board_api.h  board_flash.c  boards.c  boards.h  compile_date.h  ghostfat.c  images.c  main.c  msc.c  screen.c  tusb_config.h  uf2.h  usb_descriptors.c
tools/uf2/source/EveApps/common/application/: Common.c  Common.h  FileIo.c  FileIo.h  FileTransfer.c  FileTransfer.h  FlashHelper.c  FlashHelper.h  Gesture.c  Gesture.h  Image.c  Image.h  Logo.c  Logo.h  Maths.c  Maths.h
tools/uf2/source/EveApps/common/application/fatfs/: version.txt
tools/uf2/source/EveApps/common/application/fatfs/source/: CMakeLists.txt  diskio_ft9xx.c  diskio_rp2040.c  ffconf.h
tools/uf2/source/EveApps/common/eve_hal/: .editorconfig  .project  CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_CoCmd_Widgets.c  EVE_CoDl.c  EVE_CoDl.h  EVE_Config.h  EVE_GpuDefs.h  EVE_GpuDefs_BT81X.c  EVE_GpuDefs_BT88X.c  EVE_GpuDefs_FT80X.c  EVE_GpuDefs_FT81X.c  EVE_GpuTypes.h  EVE_Hal.c  EVE_Hal.h  EVE_Hal.md  EVE_HalDefs.h  EVE_HalImpl.h  EVE_HalImpl_BT8XXEMU.c  EVE_HalImpl_BT8XXEMUC.c  EVE_HalImpl_FT4222.c  EVE_HalImpl_FT9XX.c  EVE_HalImpl_MPSSE.c  EVE_HalImpl_MULTI.c  EVE_HalImpl_RP2040.c  EVE_HalImpl_WIN32.c  EVE_ILI9488.h  EVE_ILI9488_FT9XX.c  EVE_ILI9488_RP2040.c  EVE_IntTypes.h  EVE_IntTypes_MSVC12.h  EVE_LoadFile.h  EVE_LoadFile_FATFS.c  EVE_LoadFile_STDIO.c  (+11 more)
tools/uf2/source/EveApps/common/eve_hal/Hdr/: FT_DataTypes.h  FT_Gpu.h  FT_Gpu_Hal.h  FT_LoadFile.h  FT_Platform.h  Gpu.h  Gpu_CoCmd.h  Gpu_Hal.h  Hal_Config.h  LibFT4222.h  Platform.h  WinTypes.h  bt8xxemu.h  ftd2xx.h  libMPSSE_spi.h
(+339 files in other folders)
